--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -14,11 +14,15 @@
     text-decoration: none;
 }
 
-h1,
+h1 {
+    font-family: 'Lobster', cursive;
+}
+
 h2,
 h3,
 h4 {
-    font-family: 'Lobster', cursive;
+    font-family: sans-serif;
+    color: #2aaf75;
 }
 
 .preview {
@@ -58,7 +62,8 @@ h4 {
 
 .post h2 a,
 .post h2 a:visited {
-    color: #000000;
+    color: #2aaf75;
+    text-decoration: none;
 }
 
 .post>.date,
