--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -49,7 +49,7 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col">
+            <div class="col blog-main-content">
                 {% block content %}
                 {% endblock %}
             </div>
